# ai-vacation-planner-api

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 52a319846ae9_create_user_table.py  77281ecbe928_add_timestamps_and_unique_email_to_user.py  a88d6bf3ac55_initial_schema.py  a9b1cf761692_create_users_table.py  b7915637273f_add_trip_table.py  ca46fa07bb6e_add_itinerary_table.py
app/: main.py
app/api/v1/: auth.py  itinerary.py  trip.py
app/application/schemas/: itinerary.py  trip.py  user.py
app/application/services/: itinerary.py  trip.py  user.py
app/core/: config.py  database.py  security.py
app/domain/models/: __init__.py  itinerary.py  trip.py  user.py
app/middleware/: auth.py
